--- a/www/locales/pt_br.json
+++ b/www/locales/pt_br.json
@@ -17,7 +17,13 @@
   "logo_cloud": {
     "title": "Confiado ao redor do mundo",
     "description": "Marcas renomadas unidas para inovação incansável e excelência excepcional, criando soluções digitais verdadeiramente inovadoras.",
-    "brands": ["Transistor", "Reform", "Tuple", "SavvyCal", "Statamic"]
+    "brands": [
+      { "name": "Transistor", "src": "https://tailwindcss.com/plus-assets/img/logos/158x48/transistor-logo-gray-900.svg" },
+      { "name": "Reform", "src": "https://tailwindcss.com/plus-assets/img/logos/158x48/reform-logo-gray-900.svg" },
+      { "name": "Tuple", "src": "https://tailwindcss.com/plus-assets/img/logos/158x48/tuple-logo-gray-900.svg" },
+      { "name": "SavvyCal", "src": "https://tailwindcss.com/plus-assets/img/logos/158x48/savvycal-logo-gray-900.svg" },
+      { "name": "Statamic", "src": "https://tailwindcss.com/plus-assets/img/logos/158x48/statamic-logo-gray-900.svg" }
+    ]
   },
   "features": {
     "kicker": "Poder com Flexibilidade",
