--- a/www/locales/en_us.json
+++ b/www/locales/en_us.json
@@ -2,6 +2,16 @@
   "document": {
     "title": "Decaf - Hero Section"
   },
+  "modules": {
+    "document_title": "Decaf - Modules",
+    "title": "Explore Modules",
+    "subtitle": "Browse all Decaf modules and learn how to use them with examples extracted from their documentation.",
+    "kicker": "Module",
+    "see_examples": "See Examples",
+    "demo_label": "Module Examples",
+    "no_examples": "No examples available yet.",
+    "demo_icon": "<svg width=\"40\" height=\"40\" viewBox=\"0 0 24 24\" fill=\"none\" class=\"text-red-300\"><path d=\"M9 12L11 14L15 10\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"/><path d=\"M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z\" stroke=\"currentColor\" stroke-width=\"2\"/></svg>"
+  },
   "nav": {
     "modules": "Modules",
     "features": "Features",
@@ -173,9 +183,9 @@
       },
       "copyright": "Footer copyright line"
     },
-    "common": {
-      "logo_alt": "Alt text for the header logo image",
-      "brand_alt": "Alt text for generic brand logos in grid"
-    }
+  "common": {
+    "logo_alt": "Alt text for the header logo image",
+    "brand_alt": "Alt text for generic brand logos in grid"
   }
+}
 }
