--- a/www/locales/pt_br.json
+++ b/www/locales/pt_br.json
@@ -1,5 +1,15 @@
 {
   "document": { "title": "Decaf - Seção Hero" },
+  "modules": {
+    "document_title": "Decaf - Módulos",
+    "title": "Explorar Módulos",
+    "subtitle": "Veja todos os módulos do Decaf e aprenda a usá‑los com exemplos extraídos da documentação.",
+    "kicker": "Módulo",
+    "see_examples": "Ver Exemplos",
+    "demo_label": "Exemplos do Módulo",
+    "no_examples": "Ainda não há exemplos.",
+    "demo_icon": "<svg width=\"40\" height=\"40\" viewBox=\"0 0 24 24\" fill=\"none\" class=\"text-red-300\"><path d=\"M9 12L11 14L15 10\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"/><path d=\"M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z\" stroke=\"currentColor\" stroke-width=\"2\"/></svg>"
+  },
   "nav": {
     "modules": "Módulos",
     "features": "Recursos",
