--- a/www/locales/en_us.json
+++ b/www/locales/en_us.json
@@ -12,6 +12,20 @@
     "no_examples": "No examples available yet.",
     "demo_icon": "<svg width=\"40\" height=\"40\" viewBox=\"0 0 24 24\" fill=\"none\" class=\"text-red-300\"><path d=\"M9 12L11 14L15 10\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"/><path d=\"M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z\" stroke=\"currentColor\" stroke-width=\"2\"/></svg>"
   },
+  "examples": {
+    "document_title": "Decaf - Examples",
+    "title": "Examples for {module}",
+    "no_description": "No description available.",
+    "code": "Code",
+    "example_title": "Example {n} · {lang}",
+    "example_how_when": "When to use: apply this snippet in typical setups where this module is integrated into your application or scripts.",
+    "errors": {
+      "no_module": "No module specified. Append ?module=<name> to the URL.",
+      "not_found": "Module not found.",
+      "no_examples": "No examples found for this module.",
+      "load_failed": "Failed to load examples data."
+    }
+  },
   "nav": {
     "modules": "Modules",
     "features": "Features",
